# resume-knowledge-base

./: .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .mypy.ini  .prettierignore  .prettierrc  README.md  add_log_entry.py  main.py  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  start.sh  tailwind.config.js  webpack.config.js
Functions/: add_log_entry.py
Tests/: test_log_entry.py
Tests/integration/: validate_backend.py
Tests/scripts/: check_design_compliance.js  test_error_handling.sh  validate_frontend.js
Tests/unit/: test_api_endpoint.py  test_data_processing.py  test_error_scenarios.py  test_git_operations.py  test_responsive_design.py  test_stage_transitions.py  test_user_interactions.py
agent/: ResumeLogger.jsx
api/: add_log_entry.py  main.py  openapi.yaml  start_dev.py
claude-prompts/code-compliance/: backend-validation.md  design-compliance.md  error-handling.md  frontend-validation.md
claude-prompts/docs-gen/: deployment-checklist-update.md
claude-prompts/pre-deployment-linting/: backend-lint-suite.md  design-lint-suite.md  frontend-lint-suite.md
claude-prompts/tests-utils-create-update/: backend-workflow-tests.md  frontend-workflow-tests.md
docs/: deployment-checklist.md  deployment-checklist.md.bak.20250816234023  run-profiles.zsh  zsh-profiles.md
logs/: git-test.json
logs/2025/: 08-16_alignment_ai_governance.json  08-16_automated_self_service_power_platform_operating_model_at_scale.json  08-18_codex_logging_tool_operational.json  08-21_automated_self_service_power_platform_operating_model_at_scale.json  08-21_end_to_end_render_test.json  test-git-operations.json
prompt-templates/claude-prompts/docs-create-update/validation-manifest-create/: manifest-file-template.md
prompt-templates/claude-prompts/reusable-utils/: manifest-metaprompt.md
prompt-templates/claude-prompts/validation-manifests/code-compliance/: backend-validation.md  design-compliance.md  error-handling.md  frontend-validation.md  objectives_compliance.md
prompt-templates/claude-prompts/validation-manifests/pre-deployment-linting/: backend-lint-suite.md  design-lint-suite.md  frontend-lint-suite.md
prompt-templates/claude-prompts/validation-manifests/tests-utils-create-update/: backend-workflow-tests.md  frontend-workflow-tests.md
prompt-templates/gpt-prompts/: codex-test-remediation.md
public/: index.html
scripts/: new-imports-template.zsh  sync-imports.zsh
src/: App.js  index.css  reportWebVitals.js
tools/linting/: lint-backend  lint-design  lint-frontend
